Fix z-index of list-grid toggle

--- a/frontend/src/components/SearchResults.module.css
+++ b/frontend/src/components/SearchResults.module.css
@@ -55,6 +55,7 @@
 .list_grid_toggle {
   position: absolute;
   left: 5px;
+  z-index: 2;
 }
 
 :global .sticky {
